# wifi-proxy

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  platformio.ini  sdkconfig.defaults
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
include/: network_config.example.h
scripts/: backup_flash.sh
sim/: CMakeLists.txt  lv_conf.h  main.cpp
src/: main.cpp
